<resources>
    <string name="app_name">SoccerPlayers</string>
    <string name="citizenship">Citizenship</string>
    <string name="name">Name</string>
    <string name="age">Age:</string>
    <string name="current_club">Current Club</string>
    <string name="more_info">More Info</string>
    <string name="player_image">Player image</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="height">Height</string>
    <string name="playing_position">Playing position</string>
    <string name="web_info">Web Info</string>
    <string name="find">Find...</string>
    <string name="history">History</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="close">Close</string>
    <string name="enter_search_keyword_here">Enter search keyword here.</string>
    <string name="web_address">Web address</string>
</resources>