<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFD428"
    tools:context=".activities.PlayerActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        android:background="@drawable/border_image"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/player_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp" >

        <TextView
            android:id="@+id/ageView"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:text="@string/age" />

        <TextView
            android:id="@+id/currentClubView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:hint="@string/current_club"
            android:textColor="#000000"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="15dp"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_text"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:padding="5dp"
        android:hint="@string/name" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_gravity="center"
        android:textColor="#95000000"
        android:text="@string/more_info"
        android:textSize="20sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"/>

</LinearLayout>